<resources>
    <string name="app_name">Exercise5</string>
    <string name="name">Name</string>
    <string name="due_to">Due to</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add To Do</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="todo">To Do list</string>
    <string name="done">Done list</string>
</resources>
